basic responsive styles

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 			<h2 class="tagline">For the Sake of Focus</h2>
 			<nav>
 				<ul>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Work</a></li>
-					<li><a href="#">Awards</a></li>
+					<li><a href="#"><h2>About</h2></a></li>
+					<li><a href="#"><h2>Work</h2></a></li>
+					<li><a href="#"><h2>Awards</h2></a></li>
 				</ul>
 			</nav>
 		
@@ -36,7 +36,7 @@
 		<section class="project-description">
 			<h1>Say goodbye to<br>the sticky past.</h1>
 			<h2>Parker's Real Maple</h2>
-			<button>View</button>
+			<button class="hero-button">View</button>
 		</section>
 	
 	</main>
