functioning responsive work menu

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link href="_/css/normalize.css" rel="stylesheet" type="text/css">
 	<link href="_/css/main.css" rel="stylesheet" type="text/css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 	<title>Eve Whillier Design</title>
 </head>
 
@@ -20,7 +20,7 @@
 			<nav>
 				<ul>
 					<li><a href="#"><h2>About</h2></a></li>
-					<li><a href="#"><h2>Work</h2></a></li>
+					<li><a href="#"><h2 id="work-button">Work</h2></a></li>
 					<li><a href="#"><h2>Awards</h2></a></li>
 				</ul>
 			</nav>
@@ -41,7 +41,56 @@
 	
 	</main>
 	
+	<section id="work-menu" class="work-menu isHidden">
+		
+		<div class="project-item">
+			<div class="project-thumbnail">
+				<img src=_/assets/projects/currency/currency-thumbnail.png>
+			</div>
+			<div class="work-project-description">
+				<h1>Currency<br>Design</h1>
+				<p>A special release design of US currency for the 20th anniversary of September 11th.</p>
+				<button class="work-menu-button">View</button>
+			</div>
+		</div>
+		
+		<div class="project-item">
+			<div class="project-thumbnail">
+				<img src=_/assets/projects/currency/currency-thumbnail.png>
+			</div>
+			<div class="work-project-description">
+				<h1>Boyscout Knot-tying Starter Kit</h1>
+				<p>Starter kit illustration design and hand-crafted packaging for Boyscouts.</p>
+				<button class="work-menu-button">View</button>
+			</div>
+		</div>
+		
+		<div class="project-item">
+			<div class="project-thumbnail">
+				<img src=_/assets/projects/currency/currency-thumbnail.png>
+			</div>
+			<div class="work-project-description">
+				<h1>Boyscout Knot-tying Starter Kit</h1>
+				<p>Starter kit illustration design and hand-crafted packaging for Boyscouts.</p>
+				<button class="work-menu-button">View</button>
+			</div>
+		</div>
+		
+		<div class="project-item">
+			<div class="project-thumbnail">
+				<img src=_/assets/projects/currency/currency-thumbnail.png>
+			</div>
+			<div class="work-project-description">
+				<h1>Boyscout Knot-tying Starter Kit</h1>
+				<p>Starter kit illustration design and hand-crafted packaging for Boyscouts.</p>
+				<button class="work-menu-button">View</button>
+			</div>
+		</div>
+		
+	</section>
 	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+	<script src="_/js/interactions.js"></script>
 	
 	
 </body>
